--- a/main.tex
+++ b/main.tex
@@ -12,12 +12,12 @@
 % \pagestyle{title-subsection}
 % \pagenumbering{arabic}
 
-% \input{lec_01.tex}
-% \input{lec_02.tex}
-% \input{lec_03.tex}
-% \input{lec_04.tex}
+\input{lec_01.tex}
+\input{lec_02.tex}
+\input{lec_03.tex}
+\input{lec_04.tex}
 \input{lec_05.tex}
-% \input{lec_06.tex}
+\input{lec_06.tex}
 
 \input{eof.tex}
 \end{document}
